bins/havenc/tests/cases/fail/test_match_nonexhaustive_int.hv
//@ error: non-exhaustive match on an integer type
@export
proc main() i32 {
    let n: i32 = 3;
    match (n) {
        0 -> { return 1; }
        1 -> { return 2; }
    }
    return 0;
}
